--- a/.project
+++ b/.project
@@ -5,6 +5,7 @@ Component=gb.image
 Component=gb.gui
 Component=gb.form
 Component=gb.settings
+Component=gb.util.web
 TabSize=2
 Language=en_US
 Packager=1
