--- a/.project
+++ b/.project
@@ -8,4 +8,11 @@ Component=gb.settings
 Component=gb.util.web
 TabSize=2
 Language=en_US
+Maintainer=bisam97
+Address=bisam97@bisam97.de
+License=General Public License
+PackageName=pnponepice-0.0.3
 Packager=1
+Systems=ubuntu
+Menus=ubuntu:"Games/Adventure"
+Groups=ubuntu:"games"
