--- a/.project
+++ b/.project
@@ -1,6 +1,7 @@
 # Gambas Project File 3.0
 Startup=FSelect
-Version=0.0.4
+Version=0.0.5
+VersionFile=1
 Component=gb.image
 Component=gb.gui
 Component=gb.form
